# Expense-Tracker-On-chain

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  example.md  package.json  pnpm-lock.yaml  todo.md
.claude/skills/contract-audit-lite/: SKILL.md
.claude/skills/generate-test-matrix/: SKILL.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.claude/skills/review-security/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: anchor-integration.yml  ci.yml  security.yml
apps/api/: Cargo.toml
apps/api/src/: auth.rs  authz.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
apps/api/src/routes/: auth.rs
apps/api/src/routes/v1/: audit.rs  categories.rs  expenses.rs  mod.rs  onchain_commit.rs  reports.rs  users.rs
apps/api/src/security/: jwt.rs  mod.rs  solana_signature.rs
apps/api/tests/: auth_integration.rs
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: app-nav.tsx  (+3 more)
contracts/expense_program/: Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml
contracts/expense_program/programs/expense_program/: Cargo.toml
contracts/expense_program/programs/expense_program/src/: lib.rs
contracts/expense_program/scripts/: gen_hybrid_txs.cjs
contracts/expense_program/tests/: expense_program.ts
docs/: Architecture.md  BusinessLogic.md  DataFlow.md  Diagrams.md  Project-Guide.md  Security.md  Workflow.md
infra/migrations/: 0001_init.sql  0002_auth_nonce.sql  0003_api_constraints_indexes.sql  0004_auth_sessions.sql  0005_expenses_audit_idempotency_pg.sql  0006_hybrid_onchain_commit_columns.sql  0007_hybrid_onchain_constraints.sql  0008_hybrid_onchain_validate_constraints.sql  0009_hybrid_onchain_audit_constraint_compat.sql
scripts/: bootstrap.sh  deploy-devnet.sh  deploy-localnet.sh  dev-up.sh  get_access_token.cjs  mnemonic_to_solana_keypair.cjs  security-check.sh  test-all.sh  verify_hybrid_e2e.sh
test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
test-ledger/rocksdb/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000013
test-ledger/rocksdb.failed/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000011
(+20 files in other folders)
