[package]
name = "expense-tracker-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
jsonwebtoken = "9"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bs58 = "0.5"
ed25519-dalek = "2"
once_cell = "1"
async-trait = "0.1"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
ed25519-dalek = "2"
bs58 = "0.5"
